# copyright-checker

./: README.md  pyproject.toml
src/copyright_checker/: cli.py  validator.py
tests/: test_validator.py
tests/test_data/invalid/incorrect_yml/: image.png.yml
tests/test_data/valid/: image.png.yml  image2.bmp.yml
